<resources>
    <string name="app_name">Places</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="email">Email</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_lugares_main">LugaresMainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="lugares">Lugares</string>
    <string name="perfil">Perfil</string>
    <string name="acercade">Acerca de</string>
    <string name="cuentalb">Cuenta</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="titulo_lugares_general">General</string>
    <string name="titulo_lugares_fotos">Foto</string>
    <string name="titulo_lugares_mapa">Mapa</string>
    <string name="title_activity_maps_activity_example">Map</string>
    <string name="edad">Edad</string>
    <string name="nombreLugar">Nombre del Lugar</string>
    <string name="descCorta">Descripción corta</string>
    <string name="infoGeneral">Información General</string>
    <string name="temperatura">Temperatura</string>
    <string name="lugaresRecoCreTV">Lugares Recomendados</string>
    <string name="puntuacion">Puntuación (0~10)</string>
    <string name="longitud">Longitud</string>
    <string name="latitud">Latitud</string>
    <string name="guardar">Guardar</string>
</resources>
